--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
               <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                 <!-- Project 1 -->
                 <div
-                  class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
+                  class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
                 >
                   <a
                     href="https://github.com/DanielSon721/Portfolio"
@@ -327,7 +327,7 @@
 
                 <!-- Project 2 -->
                 <div
-                  class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
+                  class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
                 >
                   <a
                     href="https://github.com/DanielSon721/Professor-Ratings"
@@ -358,7 +358,7 @@
 
                 <!-- Project 3 -->
                 <div
-                  class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
+                  class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
                 >
                   <a
                     href="https://github.com/DanielSon721/Auto-Messenger"
@@ -389,7 +389,7 @@
 
                 <!-- Project 4 -->
                 <div
-                  class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
+                  class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
                 >
                   <a
                     href="https://github.com/DanielSon721/OCaml-Interpreter"
@@ -416,7 +416,7 @@
 
                 <!-- Project 5 -->
                 <div
-                  class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
+                  class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
                 >
                   <a
                     href="https://github.com/DanielSon721/Unix-Shell"
@@ -443,7 +443,7 @@
 
                 <!-- Project 6 -->
                 <div
-                  class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
+                  class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
                 >
                   <a
                     href="https://github.com/DanielSon721/Bittorent"
@@ -467,7 +467,7 @@
 
                 <!-- Project 7 -->
                 <div
-                  class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
+                  class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
                 >
                   <a
                     href="https://github.com/DanielSon721/Slime-Skirmish"
@@ -494,7 +494,7 @@
 
                 <!-- Project 8 -->
                 <div
-                  class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
+                  class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
                 >
                   <a
                     href="https://github.com/DanielSon721/Reverse-Engineered-Chatroom-Server"
