--- a/projects.html
+++ b/projects.html
@@ -73,7 +73,7 @@
             >
               <!-- Project -->
               <div
-                class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
+                class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
                 <a
                   href="https://github.com/DanielSon721/Portfolio"
@@ -100,7 +100,7 @@
 
               <!-- Project -->
               <div
-                class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
+                class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
                 <a
                   href="https://github.com/DanielSon721/Professor-Ratings"
@@ -131,7 +131,7 @@
 
               <!-- Project -->
               <div
-                class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
+                class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
                 <a
                   href="https://github.com/DanielSon721/Auto-Messenger"
@@ -162,7 +162,7 @@
 
               <!-- Project -->
               <div
-                class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
+                class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
                 <a
                   href="https://github.com/DanielSon721/OCaml-Interpreter"
@@ -189,7 +189,7 @@
 
               <!-- Project -->
               <div
-                class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
+                class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
                 <a
                   href="https://github.com/DanielSon721/Unix-Shell"
@@ -216,7 +216,7 @@
 
               <!-- Project -->
               <div
-                class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
+                class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
                 <a
                   href="https://github.com/DanielSon721/Bittorent"
@@ -240,7 +240,7 @@
 
               <!-- Project -->
               <div
-                class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
+                class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
                 <a
                   href="https://github.com/DanielSon721/Slime-Skirmish"
@@ -266,7 +266,7 @@
               </div>
 
               <div
-                class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
+                class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
                 <a
                   href="https://github.com/DanielSon721/Reverse-Engineered-Chatroom-Server"
@@ -299,7 +299,7 @@
 
               <!-- Project -->
               <div
-                class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
+                class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
                 <a
                   href="https://github.com/DanielSon721/RLCS-Predictor"
@@ -330,7 +330,7 @@
 
               <!-- Project -->
               <div
-                class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
+                class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
                 <a
                   href="https://github.com/DanielSon721/Payroll-Management-System"
@@ -359,7 +359,7 @@
 
               <!-- Project -->
               <div
-                class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
+                class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
                 <a
                   href="https://github.com/DanielSon721/Assembly-Methods"
@@ -382,7 +382,7 @@
 
               <!-- Project -->
               <div
-                class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
+                class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
                 <a
                   href="https://github.com/DanielSon721/Garbage-Collector"
@@ -409,7 +409,7 @@
 
               <!-- Project -->
               <div
-                class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
+                class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
                 <a
                   href="https://github.com/DanielSon721/Calendar"
@@ -440,7 +440,7 @@
 
               <!-- Project -->
               <div
-                class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
+                class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
                 <a
                   href="https://github.com/DanielSon721/Texas-Hold-em-Poker"
@@ -463,7 +463,7 @@
 
               <!-- Project -->
               <div
-                class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
+                class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
                 <a
                   href="https://github.com/DanielSon721/Financial-Inclusion"
@@ -494,7 +494,7 @@
 
               <!-- Project -->
               <div
-                class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
+                class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
                 <a
                   href="https://github.com/DanielSon721/Client-Server"
@@ -517,7 +517,7 @@
 
               <!-- Project -->
               <div
-                class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
+                class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
                 <a
                   href="https://github.com/DanielSon721/Hacking-Tools"
@@ -548,7 +548,7 @@
 
               <!-- Project -->
               <div
-                class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
+                class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
                 <a
                   href="https://github.com/DanielSon721/Complex-Calculator"
@@ -575,7 +575,7 @@
 
               <!-- Project -->
               <div
-                class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
+                class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
                 <a
                   href="https://github.com/DanielSon721/Cryptographic-Tools"
@@ -598,7 +598,7 @@
 
               <!-- Project -->
               <div
-                class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
+                class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
                 <a
                   href="https://github.com/DanielSon721/Home-Lab"
@@ -633,7 +633,7 @@
 
               <!-- Project -->
               <div
-                class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
+                class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
                 <a
                   href="https://github.com/DanielSon721/Login-Page-Penetration-Test"
