added glow to writing

--- a/writing.html
+++ b/writing.html
@@ -65,7 +65,7 @@
               class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-6 mb-8"
             >
               <div
-                class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
+                class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
               >
                 <a
                   href="https://github.com/DanielSon721/Why-I-Love-Cybersecurity"
@@ -84,7 +84,7 @@
               </div>
 
               <div
-                class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
+                class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
               >
                 <a href="writing.html?sample=machines" class="block">
                   <h3 class="text-xl font-bold mb-2">
@@ -98,7 +98,7 @@
               </div>
 
               <div
-                class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
+                class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
               >
                 <a href="writing.html?sample=platovsmlk" class="block">
                   <h3 class="text-xl font-bold mb-2">
@@ -114,7 +114,7 @@
               </div>
 
               <div
-                class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
+                class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
               >
                 <a href="writing.html?sample=cherryhill" class="block">
                   <h3 class="text-xl font-bold mb-2">
@@ -128,7 +128,7 @@
               </div>
 
               <div
-                class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
+                class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
               >
                 <a href="writing.html?sample=gymculture" class="block">
                   <h3 class="text-xl font-bold mb-2">
@@ -144,7 +144,7 @@
               </div>
 
               <div
-                class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
+                class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
               >
                 <a href="writing.html?sample=commonapp" class="block">
                   <h3 class="text-xl font-bold mb-2">Common App Essay</h3>
@@ -156,7 +156,7 @@
               </div>
 
               <div
-                class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
+                class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
               >
                 <a href="writing.html?sample=america" class="block">
                   <h3 class="text-xl font-bold mb-2">
