changed about me pill

--- a/aboutme.html
+++ b/aboutme.html
@@ -63,60 +63,28 @@
                 <div>
                   <h3 class="text-xl font-semibold mb-2">Favorites</h3>
                   <div class="flex flex-wrap gap-2">
-                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
-                      >Animal : Penguin</span
-                    >
-                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
-                      >Color : Red</span
-                    >
-                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
-                      >Season : Winter</span
-                    >
-                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
-                      >Subject : Math</span
-                    >
-                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
-                      >Song : Dreams by Fleetwood Mac</span
-                    >
-                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
-                      >Sports Team : Chicago Blackhawks</span
-                    >
-                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
-                      >Vacation : Aruba</span
-                    >
-                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
-                      >Emoji : 😢</span
-                    >
-                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
-                      >Movie : Rogue One</span
-                    >
-                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
-                      >Show : Andor</span
-                    >
-                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
-                      >Video Game : Rocket League</span
-                    >
+                    <span class="skill-pill">Animal : Penguin</span>
+                    <span class="skill-pill">Color : Red</span>
+                    <span class="skill-pill">Season : Winter</span>
+                    <span class="skill-pill">Subject : Math</span>
+                    <span class="skill-pill">Song : Dreams by Fleetwood Mac</span>
+                    <span class="skill-pill">Sports Team : Chicago Blackhawks</span>
+                    <span class="skill-pill">Vacation : Aruba</span>
+                    <span class="skill-pill">Emoji : 😢</span>
+                    <span class="skill-pill">Movie : Rogue One</span>
+                    <span class="skill-pill">Show : Andor</span>
+                    <span class="skill-pill">Video Game : Rocket League</span>
                   </div>
                 </div>
 
                 <div>
                   <h3 class="text-xl font-semibold mb-2">Hobbies</h3>
                   <div class="flex flex-wrap gap-2">
-                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
-                      >Video games</span
-                    >
-                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
-                      >Weightlifting</span
-                    >
-                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
-                      >Running</span
-                    >
-                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
-                      >Skateboarding</span
-                    >
-                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
-                      >Writing</span
-                    >
+                    <span class="skill-pill">Video games</span>
+                    <span class="skill-pill">Weightlifting</span>
+                    <span class="skill-pill">Running</span>
+                    <span class="skill-pill">Skateboarding</span>
+                    <span class="skill-pill">Writing</span>
                   </div>
                 </div>
               </div>
