reintroduced leetcode analytics

--- a/index.html
+++ b/index.html
@@ -713,8 +713,6 @@
           </div>
 
           <br />
-          <br />
-          <br />
 
           <!-- Experience Section (disabled)
           <div class="mt-20">
@@ -773,14 +771,17 @@
           </div>
           -->
 
-          <br />
-          <br />
-
-          <!-- LeetCode Analytics Section (disabled)
+          <!-- LeetCode Analytics Section -->
           <div class="mt-20">
             <h2 class="text-3xl font-bold mb-8 text-center">
               📊 LeetCode Analytics
             </h2>
+
+            <h3 class="text-xl font-bold mb-4 text-center">
+              I'm trying to complete one LeetCode problem per day for 2026!
+            </h3>
+
+            <br />
 
             <div class="max-w-4xl mx-auto bg-gray-800/70 p-6 rounded-lg">
               <div class="grid grid-cols-1 text-center mb-8">
@@ -845,8 +846,8 @@
               </div>
             </div>
           </div>
-          -->
 
+          <br />
           <br />
           <br />
         </div>
