--- a/aboutme.html
+++ b/aboutme.html
@@ -1,6 +1,6 @@
 <!--aboutme.html-->
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -65,12 +65,15 @@
                   <div class="flex flex-wrap gap-2">
                     <span class="skill-pill">Animal : Penguin</span>
                     <span class="skill-pill">Color : Red</span>
-                    <span class="skill-pill">Season : Winter</span>
+                    <span class="skill-pill">Season : Spring</span>
                     <span class="skill-pill">Subject : Math</span>
-                    <span class="skill-pill">Song : Dreams by Fleetwood Mac</span>
-                    <span class="skill-pill">Sports Team : Chicago Blackhawks</span>
+                    <span class="skill-pill"
+                      >Song : Dreams by Fleetwood Mac</span
+                    >
+                    <span class="skill-pill"
+                      >Sports Team : Chicago Blackhawks</span
+                    >
                     <span class="skill-pill">Vacation : Aruba</span>
-                    <span class="skill-pill">Emoji : 😢</span>
                     <span class="skill-pill">Movie : Rogue One</span>
                     <span class="skill-pill">Show : Andor</span>
                     <span class="skill-pill">Video Game : Rocket League</span>
@@ -83,7 +86,6 @@
                     <span class="skill-pill">Video games</span>
                     <span class="skill-pill">Weightlifting</span>
                     <span class="skill-pill">Running</span>
-                    <span class="skill-pill">Skateboarding</span>
                     <span class="skill-pill">Writing</span>
                   </div>
                 </div>
