added superdimensions and star rating

--- a/writing.html
+++ b/writing.html
@@ -1,6 +1,6 @@
 <!--writing.html-->
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -67,6 +67,28 @@
               <div
                 class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
               >
+                <span class="favorite-star" aria-hidden="true" title="Favorite">★</span>
+                <a
+                  href="https://github.com/DanielSon721/The-Theory-of-Superdimensions"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="block"
+                >
+                  <h3 class="text-xl font-bold mb-2">
+                    The Theory of Superdimensions
+                  </h3>
+                  <p class="text-gray-400 mb-3">
+                    My proposal of the Phasmic Object
+                  </p>
+                  <span class="text-xs bg-blue-400 px-2 py-1 rounded"
+                    >August 27, 2025</span
+                  >
+                </a>
+              </div>
+              <div
+                class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
+              >
+                <span class="favorite-star" aria-hidden="true" title="Favorite">★</span>
                 <a
                   href="https://github.com/DanielSon721/Why-I-Love-Cybersecurity"
                   target="_blank"
