added stars to projects

--- a/index.html
+++ b/index.html
@@ -302,6 +302,7 @@
                 <div
                   class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
                 >
+                  <span class="favorite-star" aria-hidden="true" title="Favorite">★</span>
                   <a
                     href="https://github.com/DanielSon721/Portfolio"
                     target="_blank"
@@ -445,6 +446,7 @@
                 <div
                   class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
                 >
+                  <span class="favorite-star" aria-hidden="true" title="Favorite">★</span>
                   <a
                     href="https://github.com/DanielSon721/Bittorent"
                     target="_blank"
@@ -469,6 +471,7 @@
                 <div
                   class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
                 >
+                  <span class="favorite-star" aria-hidden="true" title="Favorite">★</span>
                   <a
                     href="https://github.com/DanielSon721/Slime-Skirmish"
                     target="_blank"
