--- a/projects.html
+++ b/projects.html
@@ -75,6 +75,7 @@
               <div
                 class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
+                <span class="favorite-star" aria-hidden="true" title="Favorite">★</span>
                 <a
                   href="https://github.com/DanielSon721/Portfolio"
                   target="_blank"
@@ -218,6 +219,7 @@
               <div
                 class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
+                <span class="favorite-star" aria-hidden="true" title="Favorite">★</span>
                 <a
                   href="https://github.com/DanielSon721/Bittorent"
                   target="_blank"
@@ -242,6 +244,7 @@
               <div
                 class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
+                <span class="favorite-star" aria-hidden="true" title="Favorite">★</span>
                 <a
                   href="https://github.com/DanielSon721/Slime-Skirmish"
                   target="_blank"
@@ -519,6 +522,7 @@
               <div
                 class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
+                <span class="favorite-star" aria-hidden="true" title="Favorite">★</span>
                 <a
                   href="https://github.com/DanielSon721/Hacking-Tools"
                   target="_blank"
