menu appears on hover

--- a/aboutme.html
+++ b/aboutme.html
@@ -96,7 +96,7 @@
               <h2 class="text-3xl font-bold mb-6">About Me</h2>
               Hi, I'm Daniel. I am a Korean-American from Massachusetts,
               attending the University of Maryland. I am a Computer Science and
-              Mathematics double major, entering my third undergraduate year.
+              Mathematics double major, in my third undergraduate year.
               <br /><br />
               I have been coding for a long time, starting with basic block
               coding on Scratch with my best friend in 5th grade. I took all of
@@ -108,8 +108,8 @@
               focus on cybersecurity.
               <br /><br />
               At UMD I am part of the Sigma Phi Delta Engineering Fraternity
-              where I serve as the treasurer of the executive board. Being
-              treasurer has taught me many invaluable skills such as teamwork,
+              where I served as the treasurer of the 2025 Executive Board. Being
+              treasurer taught me many invaluable skills such as teamwork,
               communication, and leadership.
               <br /><br />
               I am also part of the App Development Club where I serve as a
