--- a/projects.html
+++ b/projects.html
@@ -499,6 +499,7 @@
               <div
                 class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
+                <span class="favorite-star" aria-hidden="true" title="Favorite">★</span>
                 <a
                   href="https://github.com/DanielSon721/Client-Server"
                   target="_blank"
@@ -639,6 +640,7 @@
               <div
                 class="project-card bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
+                <span class="favorite-star" aria-hidden="true" title="Favorite">★</span>
                 <a
                   href="https://github.com/DanielSon721/Login-Page-Penetration-Test"
                   target="_blank"
