upgraded menu bar

--- a/aboutme.html
+++ b/aboutme.html
@@ -13,10 +13,43 @@
     <header id="scroll-header" class="matrix-header">
       <div class="matrix-scanline"></div>
       <nav class="matrix-nav">
-        <a href="index.html" class="matrix-link">Home</a>
-        <a href="aboutme.html" class="matrix-link">About Me</a>
-        <a href="writing.html" class="matrix-link">Writing</a>
-        <a href="projects.html" class="matrix-link">Projects</a>
+        <a href="index.html" class="matrix-link">
+          <span class="nav-icon" aria-hidden="true">
+            <svg viewBox="0 0 24 24">
+              <path d="M3 11l9-7 9 7" />
+              <path d="M5 11v9h5v-5h4v5h5v-9" />
+            </svg>
+          </span>
+          <span class="link-text">Home</span>
+        </a>
+        <a href="aboutme.html" class="matrix-link">
+          <span class="nav-icon" aria-hidden="true">
+            <svg viewBox="0 0 24 24">
+              <circle cx="12" cy="8" r="4" />
+              <path d="M5 20c0-3.3 3-6 7-6s7 2.7 7 6" />
+            </svg>
+          </span>
+          <span class="link-text">About Me</span>
+        </a>
+        <a href="writing.html" class="matrix-link">
+          <span class="nav-icon" aria-hidden="true">
+            <svg viewBox="0 0 24 24">
+              <path d="M12 19l7-7-4-4-7 7-1.5 4L12 19Z" />
+              <path d="M15 5l4 4" />
+              <path d="M3 21h6" />
+            </svg>
+          </span>
+          <span class="link-text">Writing</span>
+        </a>
+        <a href="projects.html" class="matrix-link">
+          <span class="nav-icon" aria-hidden="true">
+            <svg viewBox="0 0 24 24">
+              <path d="M10 3v4l-4 9a5 5 0 0 0 4.6 7h2.8A5 5 0 0 0 18 16l-4-9V3" />
+              <path d="M8 13h8" />
+            </svg>
+          </span>
+          <span class="link-text">Projects</span>
+        </a>
       </nav>
       <a href="index.html" class="matrix-glow">Daniel Son</a>
     </header>
