--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         <a href="writing.html" class="matrix-link">
           <span class="nav-icon" aria-hidden="true">
             <svg viewBox="0 0 24 24">
-              <path d="M12 19l7-7-4-4-7 7-1.5 4L12 19Z" />
-              <path d="M15 5l4 4" />
-              <path d="M3 21h6" />
+              <path d="M3 21l2.5-7.5 9-9 4.5 4.5-9 9Z" />
+              <path d="M12 5.5l4.5 4.5" />
+              <path d="M3 21l4.5-1.5" />
             </svg>
           </span>
           <span class="link-text">Writing</span>
