--- a/aboutme.html
+++ b/aboutme.html
@@ -44,7 +44,9 @@
         <a href="projects.html" class="matrix-link">
           <span class="nav-icon" aria-hidden="true">
             <svg viewBox="0 0 24 24">
-              <path d="M10 3v4l-4 9a5 5 0 0 0 4.6 7h2.8A5 5 0 0 0 18 16l-4-9V3" />
+              <path
+                d="M10 3v4l-4 9a5 5 0 0 0 4.6 7h2.8A5 5 0 0 0 18 16l-4-9V3"
+              />
               <path d="M8 13h8" />
             </svg>
           </span>
@@ -107,7 +109,7 @@
                       >Sports Team : Chicago Blackhawks</span
                     >
                     <span class="skill-pill">Vacation : Aruba</span>
-                    <span class="skill-pill">Movie : Rogue One</span>
+                    <span class="skill-pill">Movie : Pulp Fiction</span>
                     <span class="skill-pill">Show : Andor</span>
                     <span class="skill-pill">Video Game : Rocket League</span>
                   </div>
