--- a/aboutme.html
+++ b/aboutme.html
@@ -121,7 +121,8 @@
                     <span class="skill-pill">Video games</span>
                     <span class="skill-pill">Weightlifting</span>
                     <span class="skill-pill">Running</span>
-                    <span class="skill-pill">Writing</span>
+                    <span class="skill-pill">Bouldering</span>
+                    <span class="skill-pill">Board games</span>
                   </div>
                 </div>
               </div>
