--- a/index.html
+++ b/index.html
@@ -591,9 +591,11 @@
           <div class="mt-12">
             <h2 class="text-3xl font-bold mb-6 text-center">🎓 Education</h2>
             <div class="max-w-6xl mx-auto">
-              <h3 class="text-2xl font-bold mb-4 text-center">
+              <h3 class="text-xl font-bold mb-4 text-center">
                 University of Maryland - Computer Science and Mathematics
               </h3>
+
+              <br />
 
               <!-- Filter Buttons -->
               <div class="flex justify-center gap-4 mb-6">
